lib_LTLIBRARIES = libsmapilnx.la
libsmapilnx_la_SOURCES = msgapi.c 1stchar.c date2bin.c flush.c parsenn.c \
		      strftim.c weekday.c api_sdm.c dosdate.c locking.c \
                      patmat.c strocpy.c api_sq.c fexist.c months.c \
                      qksort.c structrw.c cvtdate.c ffind.c strextra.c \
                      trail.c      

