dnl Process this file with autoconf to produce a configure script.
AC_INIT(msgapi.h)

dnl Checks for programs.
AM_PROG_LIBTOOL
AM_INIT_AUTOMAKE(smapi, `cat VERSION`)
AC_DEFINE(UNIX)
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
